--- a/themes/kk/css/alt.css
+++ b/themes/kk/css/alt.css
@@ -1,5 +1,5 @@
 .pagination{
-    
+
 }
 ul.pagination li {
     display: inline-table;
@@ -28,28 +28,33 @@ ul.pagination li.active {
     margin: 0;
 }
 .btn-1 {
-  color: #ffffff;
-  background: #e85356;
-  padding: 5px 14px;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  text-shadow: none;
-  border: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+    color: #ffffff;
+    background: #e85356;
+    padding: 5px 14px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    text-shadow: none;
+    border: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 .btn-1:hover {
-  color: #1a1a1a;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  text-decoration: none;
-  background: #ffffff;
+    color: #1a1a1a;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    text-decoration: none;
+    background: #ffffff;
+}
+.gallery-block div.col-xs-6.col-md-3{
+    width: 200px;
+    float: left;
+    margin: 3px;
 }
