--- a/themes/bbc/css/alt.css
+++ b/themes/bbc/css/alt.css
@@ -20,3 +20,24 @@
 .gallery-block{
     margin-top: 30px;
 }
+.fmenuc{
+    float: left;
+    overflow: hidden;
+    width: 25%;
+    font-size: 13px;
+    margin-top: 20px;
+}
+.fmenuc ul{
+    margin: 0;
+    padding: 0;
+}
+.fmenuc h4{
+    font-size: 16px;
+}
+.fmenuc ul li div.adminBtn{
+    float: right;
+    margin-right: 50px;
+}
+.collapse.navbar-collapse ul.nav.navbar-nav li div.adminBtn{
+    float: right;
+}
