--- a/themes/default/css/alt.css
+++ b/themes/default/css/alt.css
@@ -44,3 +44,11 @@ ul.nav.navbar-nav li.active div.adminBtn{
     float: right;
     width: 50px;
 }
+.lastBlog div div.adminBtn{
+    float: left;
+    width: 20px;
+}
+.lastBlog .col-sm-6.col-md-4 div.thumbnail div.caption h3 div.adminBtn{    
+    float: right;
+    width: 50px;
+}
