--- a/themes/default/css/alt.css
+++ b/themes/default/css/alt.css
@@ -63,3 +63,6 @@ ul.nav.navbar-nav li.active div.adminBtn{
 .footer-nav h4 div.adminBtn{
     float: left;
 }
+.map h3 div.adminBtn{
+    float: left;
+}
