--- a/themes/aa/css/style.css
+++ b/themes/aa/css/style.css
@@ -246,7 +246,7 @@ strong { font-weight: bold; }
 /* ----- Portfolio ----- */
 
 .portfolio {
-    margin-top: 50px;
+    /*margin-top: 50px;*/
 }
 
 .portfolio-title {
@@ -263,7 +263,7 @@ strong { font-weight: bold; }
 }
 
 .portfolio .work {
-    margin-top: 40px;
+    /*margin-top: 40px;*/
     padding-bottom: 20px;
     background: #f8f8f8;
     border-bottom: 2px solid #9d426b;
@@ -812,7 +812,12 @@ footer .social a:hover { background-position: left top; }
     height: 300px;
     border: 5px solid #f8f8f8;
 }
-
+.mapa {
+    /*margin: 20px 20px 40px 20px;*/
+    
+    border: 5px solid #f8f8f8;
+    overflow: hidden;
+}
 
 /********** ----- SERVICES PAGE ----- **********/
 
