--- a/themes/agency/css/docs.css
+++ b/themes/agency/css/docs.css
@@ -70,7 +70,7 @@ section > ul li {
 /* Faded out hr */
 hr.soften {
 	height: 1px;
-	margin: 60px 0;
+	/*margin: 60px 0;*/
 	background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
 	background-image: -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
 	background-image: -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
@@ -707,7 +707,7 @@ hr.soften2 {
 	margin-bottom: 20px;
 }
 .marketing p {
-	font-size: 16px;
+	font-size: 14px;
 	line-height: 1.5;
 }
 .marketing .marketing-byline {
